--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
   <main id="main">
 
 
-    <!-- ======= Features Section ======= -->
-    <section id="features" class="features" style="background-color: #40E0D0;" data-aos="fade-up">
+    <!-- ======= Features Section =======style="background-color: #40E0D0;"  -->
+    <section id="features" class="features" data-aos="fade-up">
       <div class="container">
 
         <div class="section-title">
@@ -1277,7 +1277,22 @@
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
-
+		
+		<div class="section-title">
+          <h2>Chief Patron</h2>
+        </div>
+      <div class="container" data-aos="fade-up"  data-aos-delay="100">
+          <div class="testimonial-item icon-box">
+            <img src="assets/img/pnagabhushan.jpg" class="img-fluid circular--square" alt=""><br>
+            <h4 class="title">PROF. P. NAGABHUSHAN </h4><br/>
+                <p class="description">Director, IIITA<br>
+                B.E., M.Tech., Ph.D., FIE, FIETE.<br>
+				</p>	
+            <br>
+          </div>
+		</div>
+		
+		
         <div class="section-title">
           <h2>Distinguished Speakers</h2>
           <!-- <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p> -->
@@ -1292,8 +1307,8 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/IYER.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Dr. Parameshwar P Iyer
-                </a></h4>
+              <h4 class="title">Dr. Parameshwar P Iyer
+                </h4>
               <p class="description">Principal Scientist IISc Bangalore</p>
             </div>
           </div>
@@ -1301,7 +1316,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/praveen.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">DR. Praveen Ranjan Srivastava</a></h4>
+              <h4 class="title">DR. Praveen Ranjan Srivastava</h4>
               <p class="description">Associate Professor , IIM Rohtak</p>
             </div>
           </div>
@@ -1309,8 +1324,8 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/madhvendra.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Dr. Madhvendra Misra
-                </a></h4>
+              <h4 class="title">Dr. Madhvendra Misra
+                </h4>
               <p class="description">Associate Professor IIITA</p>
             </div>
           </div>
@@ -1318,7 +1333,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/satish.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href=""> Dr. Satish Kr. Sharma </a></h4>
+              <h4 class="title">Dr. Satish Kr. Sharma</h4>
               <p class="description">G B Pant Uni. of Agriculture & Tech. Pantnagar, India</p>
             </div>
           </div>
@@ -1336,8 +1351,8 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/Screenshot (113).png" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Mr. Sumit Agarwal
-                </a></h4>
+              <h4 class="title">Mr. Sumit Agarwal
+                </h4>
               <p class="description">Chartered Accountant , Allahabad</p>
             </div>
           </div>
@@ -1346,8 +1361,8 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/shefali.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Dr. Shefali Nandan
-                </a></h4>
+              <h4 class="title">Dr. Shefali Nandan
+                </h4>
               <p class="description">Assistant Professor
 
                 ,MONIRBA, University of Allahabad</p>
@@ -1357,8 +1372,8 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/mamta.jpeg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Ms. Mamta Gupta
-                </a></h4>
+              <h4 class="title">Ms. Mamta Gupta
+                </h4>
               <p class="description">Chartered Accountant , Allahabad</p>
             </div>
           </div>
@@ -1367,8 +1382,8 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/shailendrak.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">DR. Shailendra KumR
-                </a></h4>
+              <h4 class="title">DR. Shailendra KumR
+                </h4>
               <p class="description">Assistant Professor
                 , IIITA.</p>
             </div>
@@ -1387,8 +1402,8 @@
               data-aos-delay="100">
               <div class="icon-box">
                 <img src="assets/img/ranjana.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title"><a href="">dR. Ranjana Vyas
-                  </a></h4>
+                <h4 class="title">dR. Ranjana Vyas
+                  </h4>
                 <p class="description"> PI & Coordinator, NEW GEN IEDC,IIITA</p>
               </div>
             </div>
@@ -1397,8 +1412,8 @@
               data-aos-delay="100">
               <div class="icon-box">
                 <img src="assets/img/rkala.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title"><a href="">Dr. Rahul Kala
-                  </a></h4>
+                <h4 class="title">Dr. Rahul Kala
+                  </h4>
                 <p class="description">Assistant Professor
 
                   ,MONIRBA, University of Allahabad</p>
@@ -1410,8 +1425,8 @@
               data-aos-delay="100">
               <div class="icon-box">
                 <img src="assets/img/testimonials/profPA.png" class="img-fluid circular--square" alt="">
-                <h4 class="title"><a href="">DR. PRAGYA SINGH
-                  </a></h4>
+                <h4 class="title">DR. PRAGYA SINGH
+                  </h4>
                 <p class="description">Assistant Professor
                   Department of Management Studies, IIITA.</p>
               </div>
