--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/IYER.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Dr. Parameshwar P Iyer
+              <h4 class="title">Dr. Parameshwar P Iyer
                 </a></h4>
               <p class="description">Principal Scientist IISc Bangalore</p>
             </div>
@@ -1301,7 +1301,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/praveen.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">DR. Praveen Ranjan Srivastava</a></h4>
+              <h4 class="title">DR. Praveen Ranjan Srivastava</a></h4>
               <p class="description">Associate Professor , IIM Rohtak</p>
             </div>
           </div>
@@ -1309,7 +1309,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/madhvendra.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Dr. Madhvendra Misra
+              <h4 class="title">Dr. Madhvendra Misra
                 </a></h4>
               <p class="description">Associate Professor IIITA</p>
             </div>
@@ -1318,7 +1318,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/satish.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href=""> Dr. Satish Kr. Sharma </a></h4>
+              <h4 class="title"> Dr. Satish Kr. Sharma </a></h4>
               <p class="description">G B Pant Uni. of Agriculture & Tech. Pantnagar, India</p>
             </div>
           </div>
@@ -1336,7 +1336,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/Screenshot (113).png" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Mr. Sumit Agarwal
+              <h4 class="title">Mr. Sumit Agarwal
                 </a></h4>
               <p class="description">Chartered Accountant , Allahabad</p>
             </div>
@@ -1346,7 +1346,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/shefali.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Dr. Shefali Nandan
+              <h4 class="title">Dr. Shefali Nandan
                 </a></h4>
               <p class="description">Assistant Professor
 
@@ -1357,7 +1357,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/mamta.jpeg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">Ms. Mamta Gupta
+              <h4 class="title">Ms. Mamta Gupta
                 </a></h4>
               <p class="description">Chartered Accountant , Allahabad</p>
             </div>
@@ -1367,7 +1367,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <img src="assets/img/shailendrak.jpg" class="img-fluid circular--square" alt="">
-              <h4 class="title"><a href="">DR. Shailendra KumR
+              <h4 class="title">DR. Shailendra KumR
                 </a></h4>
               <p class="description">Assistant Professor
                 , IIITA.</p>
@@ -1387,7 +1387,7 @@
               data-aos-delay="100">
               <div class="icon-box">
                 <img src="assets/img/ranjana.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title"><a href="">dR. Ranjana Vyas
+                <h4 class="title">dR. Ranjana Vyas
                   </a></h4>
                 <p class="description"> PI & Coordinator, NEW GEN IEDC,IIITA</p>
               </div>
@@ -1397,8 +1397,8 @@
               data-aos-delay="100">
               <div class="icon-box">
                 <img src="assets/img/rkala.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title"><a href="">Dr. Rahul Kala
-                  </a></h4>
+                <h4 class="title">Dr. Rahul Kala
+                </h4>
                 <p class="description">Assistant Professor
 
                   ,MONIRBA, University of Allahabad</p>
@@ -1410,7 +1410,7 @@
               data-aos-delay="100">
               <div class="icon-box">
                 <img src="assets/img/testimonials/profPA.png" class="img-fluid circular--square" alt="">
-                <h4 class="title"><a href="">DR. PRAGYA SINGH
+                <h4 class="title">DR. PRAGYA SINGH
                   </a></h4>
                 <p class="description">Assistant Professor
                   Department of Management Studies, IIITA.</p>
