--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
           <li><a href="#portfolio">Schedule</a></li>
           <li><a href="#services">Speakers</a></li>
           <!--li> <a href="#gform" class="get-started-btn scrollto">Participate</a></li-->
-          <li> <a target="_blank"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform">Registration</a>
+          <li> <a target="_blank" href="#">Registration</a>
           </li>
           <li><a href="#testimonials">Contacts</a></li>
 
@@ -324,6 +323,68 @@
       </div>
     </section>
     <!-- End About Section -->
+
+    <section id="pricing" class="pricing section-bg">
+      <div class="container aos-init aos-animate" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Registration</h2>
+
+        </div>
+
+        <div class="row">
+
+
+
+          <div class="col-lg-12 col-md-12 mt-12 mt-md-0 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+            <div class="box featured">
+              <ul>
+                <li>For faculty Members,Trainer,Industry,Professional and Administrative officer
+                  <p>
+
+
+
+
+
+
+
+
+                    <br>
+
+                    <b>Registration Fee</b>
+
+                    : <b>Rs 1180</b> *(Inclusive of 18% of GST)
+                  </p>
+                </li>
+                <li>For Research Scholar and Students (UG,PG)
+                  <p>
+
+                    <br>
+
+                    <b>Registration Fee</b>
+
+                    : <b>Rs 590</b> *(Inclusive of 18% of GST)
+                  </p>
+                </li>
+
+              </ul>
+              <div class="btn-wrap">
+                <a href=""
+                  https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform""
+                  class="btn-buy">REGISTER</a>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+
+      </div>
+    </section>
+
+
+
 
 
     <section id="portfolio" class="portfolio">
@@ -1303,7 +1364,7 @@
             <p class="description">Director, IIITA<br>
             </p>
             <br><br><br><br>
-          
+
             <img src="assets/img/vijayshri.jpg" class="img-fluid circular--square" alt=""><br>
             <h4 class="title">Dr. VIJAYSHRI TEWARI</h4><br />
             <p class="description">Associate Professor<br>
