--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,7 @@
                 <img src="assets/img/vijayshri.jpg" class="img-fluid circular--square" alt="">
                 <h4 class="title">Dr. VIJAYSHRI TEWARI
                 </h4>
-                <p class="description">Associate Professor IIITA<br>
+                <p class="description">Associate Professor <br>
                   Registrar (Officiating)<br>
                   Department of Management Studies, IIITA.</p>
               </div>
